# kuafu

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  fivebar_ik_table.json  kuafu_physics.py  mechanism.html  policy.onnx.data  policy.onnx.manifest.json
analysis/: .gitignore  README.md  pyproject.toml  run_all.py
analysis/kuafu/: __init__.py  mechanism.py  styling.py
analysis/optimize/: __init__.py  analyze_params.py  dirichlet_weights.py  monte_carlo.py  plot_optimization.py
analysis/plot/: __init__.py  plot_dynamics.py  plot_force_ellipsoid.py  plot_lqr.py  plot_workspace.py
analysis/test/: __init__.py  test_kinematics.py
docs/: KUAFU.md  KUAFU结构设计.md  KUAFU运动学与动力学分析.md  KUAFU项目信息书.md  README.md  SYMBOLS.md  最优尺寸速查.md  硬件清单.md  装机速查.md
docs/architecture/: system.md
docs/contracts/: interface.md
docs/hardware/: bring_up_log_2026-07-16.md  calibration.md  wiring.md
docs/operations/: deployment.md  training.md
docs/plans/: 2026-07-08-软件架构与RL技术路线-design.md  2026-07-09-自主导航与SLAM选型-design.md  2026-07-16-stm32-firmware-completion-design.md  2026-07-16-stm32-firmware-completion.md
docs/validation/: acceptance.md  stm32-firmware-2026-07-16.md
pi5_runtime/: __init__.py  command_socket.py  link_probe.py  protocol.py  requirements.txt  runtime.py  serial_node.py  teleop_node.py  teleop_single.py
rl/: README.md  REWARD_PLAN.md  kuafu.xml  requirements.txt
rl/env/: __init__.py  contract.py  fivebar_ik_table.json  kuafu_env.py  kuafu_mjx_env.py  terrain.py
stm32_firmware/: README.md  pin_connections.md
stm32_firmware/tests/: CMakeLists.txt  run_host_tests.ps1  test_bmi088.c  test_ddsm315.c  test_device_health.c  test_firmware_runtime.c  test_main.c  test_pi_link.c  test_safety_state.c  test_servo_mapping.c  test_st3215.c  test_startup_manager.c  test_support.c  test_support.h
stm32_firmware/tests/hal_stubs/: stm32f4xx.h  stm32f4xx_hal.h
(+111 files in other folders)
