[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kuafu-analysis"
version = "2.0.0"
description = "KUAFU 桌面双轮腿机器人 — 运动学与动力学分析"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=7"]

# 让 analysis/ 成为包根, kuafu/ 为顶层可导入包
[tool.setuptools]
packages = ["kuafu"]

# 支持直接运行 plot/plot_*.py (pytest 也能找到包)
[tool.pytest.ini_options]
testpaths = ["test"]
